# network-lab

./: .gitignore  Claude.md  README.md  main.py  pyproject.toml
containerfiles/: bird.containerfile  build.sh  frr.containerfile  gobgp.containerfile  supervisord-bird.conf  supervisord-frr.conf  supervisord-gobgp.conf
dockerfiles/: bird  gobgp
examples/: vwan.yml
network_lab/: bgp_config.py  cli.py  config.py  engine.py  graph.py  podman.py
